<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/images" >
    
    <TableLayout
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >
	    
        <TableRow
	        android:id="@+id/sec1_01_row01"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content">
	        
	        <TextView
	            android:id="@+id/sec1_01_row01_label_textView"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="1"
	        	android:text="@string/sec1_01_row01_label"
	            android:textSize="18sp"
	            android:textColor="@color/white" />
	        
	        <TextView
	            android:id="@+id/sec1_01_row01_value_textView"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="2"
	            android:textSize="18sp"
	            android:textColor="@color/white" />
	        
	    </TableRow>
	    
        <TableRow
	        android:id="@+id/sec1_01_row02"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content">
	        
	        <TextView
	            android:id="@+id/sec1_01_row02_label_textView"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="1"
	        	android:text="@string/sec1_01_row02_label"
	            android:textSize="18sp"
	            android:textColor="@color/white" />
	        
	        <TextView
	            android:id="@+id/sec1_01_row02_value_textView"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="2"
	            android:textSize="18sp"
	            android:textColor="@color/white" />
	        
	    </TableRow>
	    
        <TableRow
	        android:id="@+id/sec1_01_row03"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content">
	        
	        <TextView
	            android:id="@+id/sec1_01_row03_label_textView"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="1"
	        	android:text="@string/sec1_01_row03_label"
	            android:textSize="18sp"
	            android:textColor="@color/white" />
	        
	        <TextView
	            android:id="@+id/sec1_01_row03_value_textView"
	            android:layout_width="wrap_content"
	        	android:layout_height="fill_parent"
	        	android:layout_weight="2"
	            android:textSize="12sp"
	            android:textColor="@color/white" />
	        
	    </TableRow>
	    
        <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical|center_horizontal" >
	
	        <Button
	            android:id="@+id/button1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/sec1_01_button1_label" />
	    </LinearLayout>
    </TableLayout>
</ScrollView>